--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
-    "graphql": "^14.2.1"
+    "graphql": "^14.2.1",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
